--- a/app/globals.css
+++ b/app/globals.css
@@ -15,4 +15,24 @@ body {
   .section-subheading {
     @apply text-center text-gray-800 mt-3 text-sm md:text-lg;
   }
+
+  .text-balance {
+    text-wrap: balance;
+  }
+
+  .form-group {
+    @apply flex flex-col mb-4 sm:w-[500px] gap-1 w-full;
+  }
+
+  .form-label {
+    @apply mb-1 font-medium text-sm;
+  }
+
+  .form-input {
+    @apply bg-zinc-900 border border-zinc-700 rounded  px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500 sm:w-[500px];
+  }
+
+  .form-error {
+    @apply text-red-500 text-xs mt-1;
+  }
 }
